# xinjing-desktop

./: .cnb.yml  .gitignore  PROJECT.md  RELEASE-4.0.0.md  RELEASE-4.0.1.md  RELEASE-4.0.3.md  RELEASE-4.0.4.md  RELEASE-4.1.0.md  RELEASE-4.1.1.md  RELEASE-4.2.0.md  XinJing-AI督导界面改造计划.md  XinJing-Agent-改造方案.md  XinJing-Agent设置API接口-技术文档.md  XinJing-Chat大师对话对比调研报告.md  XinJing-v1.6.2-退化循环修复说明.md  XinJing-v1.6.3-技术方案.md  XinJing-v1.6.4-技术方案.md  XinJing-v1.7.0-技术方案.md  XinJing-v2.0-P0到P2-完成报告.md  XinJing-v2.0-审查报告.md  XinJing-v2.0-技术方案.md  XinJing-v3.0.0-项目文档-给下一个AI.md  XinJing-v3.0.0-项目重构计划书.md  XinJing-v3.0.3-交接文档-给下一个AI.md  XinJing-v3.1.0-总体计划.md  XinJing-交接文档-v2.1.0-给下一个AI.md  XinJing-代理接入-待提供清单.md  XinJing-咨询记录主工作区设计.md  XinJing-大师对话无法输入-诊断与修复.md  XinJing-客户经理视角产品意见.md  XinJing-收费模式与请求包设计.md  XinJing-记账界面P0P1改造说明.md  XinJing-记账界面完全重构设计.md  XinJing-记账界面改造计划.md  XinJing-设计HTML落地评估与融合计划.md  billing-demo-A-tab-income-expense.html  billing-demo-B-card-dashboard.html  billing-demo-C-dual-income-expense.html  billing-demo-D-calendar-view.html  billing-demo-E-stream-list.html  (+82 more)
android/: build.gradle
app/: activation.html  billing-calendar.html  billing-shell.html  billing-theme.css  billing.html  chat-home.html  client-detail.html  clients.html  confirm-close.html  consult-notes.html  consultations.html  feedback.html  (+22 more)
xinjing-tauri/src-tauri/: Cargo.toml  build-installer.nsi  tauri.conf.json
xinjing-tauri/src-tauri/capabilities/: default.json
xinjing-tauri/src-tauri/icons/: icon.icns
xinjing-tauri/src-tauri/src/: doc_chunker.rs  lib.rs  license.rs  main.rs  rag_index.rs
(+157 files in other folders)
