[package]
name = "xinjing-tauri"
version = "1.0.0"
description = "心镜 XinJing — Tauri v2 桌面版"
authors = ["Mei"]
edition = "2021"

[lib]
name = "xinjing_tauri_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, package = "reqwest" }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base32 = "0.5"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
keyring = "3"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 16
opt-level = "s"
strip = true
